@@ -4,6 +4,22 @@ Section: misc
 Priority: optional
 Build-Depends: config-package-dev,
                debhelper-compat (= 12),
+               clang,
+               pkg-config,
+               meson,
+               libfmt-dev,
+               libgflags-dev,
+               libjsoncpp-dev,
+               libcurl4-openssl-dev,
+               libgoogle-glog-dev,
+               libgtest-dev,
+               libssl-dev,
+               libxml2-dev,
+               uuid-dev,
+               libprotobuf-dev,
+               libprotobuf-c-dev,
+               protobuf-compiler,
+               libz3-dev
 Standards-Version: 4.5.0
 
 Package: cuttlefish-base
@@ -11,8 +27,10 @@ Architecture: any
 Depends: adduser,
          binfmt-support [arm64],
          bridge-utils,
+         curl,
          dnsmasq-base,
          e2fsprogs,
+         ebtables-legacy | ebtables,
          f2fs-tools,
          grub-efi-arm64-bin [arm64],
          grub-efi-ia32-bin [!arm64],
@@ -29,10 +47,10 @@ Depends: adduser,
          libxext6,
          lsb-base,
          net-tools,
+         openssl,
          python3,
-         util-linux,
          qemu-user-static [arm64],
-         ebtables-legacy | ebtables,
+         util-linux,
          ${misc:Depends},
          ${shlibs:Depends}
 Pre-Depends: ${misc:Pre-Depends}
